--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e109_reduced_area/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e109_reduced_area/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(109, Tag 1), C\textsubscript{UWB}(109, Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0323 & 0.0034 & 0.0584 \\
-& \texttt{y\textsubscript{P2R}} & 0.0597 & 0.0113 & 0.1061 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(109, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{UWB}} & 0.0445 & 0.0030 & 0.0546 \\
+& \texttt{y\textsubscript{UWB}} & 0.0218 & 0.0010 & 0.0310 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(109, Tag 1), C\textsubscript{UWB}(109, Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.2287 & 0.0659 & 0.2566 \\
-& \texttt{y\textsubscript{Opt}} & 0.1417 & 0.0355 & 0.1885 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(109, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0540 & 0.0054 & 0.0734 \\
+& \texttt{y\textsubscript{P2R}} & 0.0666 & 0.0123 & 0.1107 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(109, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.2158 & 0.0552 & 0.2349 \\
+& \texttt{y\textsubscript{Opt}} & 0.1404 & 0.0348 & 0.1866 \\
 \hline
 \end{tabular}
 \end{table}
