--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e113/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e113/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(113, Tag 1), C\textsubscript{UWB}(113, Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0759 & 0.0125 & 0.1120 \\
-& \texttt{y\textsubscript{P2R}} & 0.1664 & 0.0551 & 0.2347 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(113, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{UWB}} & 0.0187 & 0.0006 & 0.0249 \\
+& \texttt{y\textsubscript{UWB}} & 0.0100 & 0.0002 & 0.0126 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(113, Tag 1), C\textsubscript{UWB}(113, Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.1993 & 0.0455 & 0.2133 \\
-& \texttt{y\textsubscript{Opt}} & 0.1842 & 0.0482 & 0.2195 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(113, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0750 & 0.0123 & 0.1109 \\
+& \texttt{y\textsubscript{P2R}} & 0.1656 & 0.0553 & 0.2353 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(113, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.1993 & 0.0452 & 0.2127 \\
+& \texttt{y\textsubscript{Opt}} & 0.1830 & 0.0477 & 0.2183 \\
 \hline
 \end{tabular}
 \end{table}
