--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person1/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person1/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 1), C\textsubscript{UWB}(118, Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.1781 & 0.0469 & 0.2166 \\
-& \texttt{y\textsubscript{P2R}} & 0.3104 & 0.1540 & 0.3925 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{UWB}} & 0.1444 & 0.0306 & 0.1750 \\
+& \texttt{y\textsubscript{UWB}} & 0.1075 & 0.0232 & 0.1524 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 1), C\textsubscript{UWB}(118, Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.4504 & 0.2437 & 0.4936 \\
-& \texttt{y\textsubscript{Opt}} & 0.1955 & 0.0652 & 0.2553 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.1009 & 0.0160 & 0.1267 \\
+& \texttt{y\textsubscript{P2R}} & 0.2343 & 0.1157 & 0.3401 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.3194 & 0.1193 & 0.3454 \\
+& \texttt{y\textsubscript{Opt}} & 0.1509 & 0.0497 & 0.2230 \\
 \hline
 \end{tabular}
 \end{table}
