--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person2/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person2/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 2), C\textsubscript{UWB}(118, Tag 2))}} & \texttt{x\textsubscript{P2R}} & 0.2161 & 0.0758 & 0.2753 \\
-& \texttt{y\textsubscript{P2R}} & 0.2849 & 0.1581 & 0.3976 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{UWB}} & 0.1631 & 0.0404 & 0.2009 \\
+& \texttt{y\textsubscript{UWB}} & 0.1366 & 0.0471 & 0.2171 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 2), C\textsubscript{UWB}(118, Tag 2))}} & \texttt{x\textsubscript{Opt}} & 0.4137 & 0.2533 & 0.5033 \\
-& \texttt{y\textsubscript{Opt}} & 0.2216 & 0.0870 & 0.2950 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{P2R}} & 0.0924 & 0.0145 & 0.1205 \\
+& \texttt{y\textsubscript{P2R}} & 0.2010 & 0.0743 & 0.2726 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{Opt}} & 0.3163 & 0.1225 & 0.3499 \\
+& \texttt{y\textsubscript{Opt}} & 0.1200 & 0.0226 & 0.1504 \\
 \hline
 \end{tabular}
 \end{table}
