--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person3/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_full_area_person3/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 3), C\textsubscript{UWB}(118, Tag 3))}} & \texttt{x\textsubscript{P2R}} & 0.1492 & 0.0356 & 0.1887 \\
-& \texttt{y\textsubscript{P2R}} & 0.3782 & 0.3438 & 0.5864 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(118, Tag 3), RS\textsubscript{0.5m}(Tag 3))}} & \texttt{x\textsubscript{UWB}} & 0.1337 & 0.0327 & 0.1808 \\
+& \texttt{y\textsubscript{UWB}} & 0.1188 & 0.0245 & 0.1565 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 3), C\textsubscript{UWB}(118, Tag 3))}} & \texttt{x\textsubscript{Opt}} & 0.3615 & 0.1712 & 0.4138 \\
-& \texttt{y\textsubscript{Opt}} & 0.6454 & 1.0504 & 1.0249 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 3), RS\textsubscript{0.5m}(Tag 3))}} & \texttt{x\textsubscript{P2R}} & 0.1302 & 0.0259 & 0.1608 \\
+& \texttt{y\textsubscript{P2R}} & 0.3279 & 0.2600 & 0.5099 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 3), RS\textsubscript{0.5m}(Tag 3))}} & \texttt{x\textsubscript{Opt}} & 0.2689 & 0.0855 & 0.2924 \\
+& \texttt{y\textsubscript{Opt}} & 0.5384 & 0.8775 & 0.9367 \\
 \hline
 \end{tabular}
 \end{table}
