--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_reduced_area_person1/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_reduced_area_person1/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 1), C\textsubscript{UWB}(118, Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.1389 & 0.0302 & 0.1739 \\
-& \texttt{y\textsubscript{P2R}} & 0.1644 & 0.0361 & 0.1899 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{UWB}} & 0.1095 & 0.0185 & 0.1360 \\
+& \texttt{y\textsubscript{UWB}} & 0.1090 & 0.0145 & 0.1205 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 1), C\textsubscript{UWB}(118, Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.3071 & 0.1125 & 0.3354 \\
-& \texttt{y\textsubscript{Opt}} & 0.1142 & 0.0178 & 0.1335 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0796 & 0.0107 & 0.1035 \\
+& \texttt{y\textsubscript{P2R}} & 0.0750 & 0.0122 & 0.1103 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.2218 & 0.0561 & 0.2369 \\
+& \texttt{y\textsubscript{Opt}} & 0.0671 & 0.0058 & 0.0761 \\
 \hline
 \end{tabular}
 \end{table}
