--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_reduced_area_person2/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e118_reduced_area_person2/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 2), C\textsubscript{UWB}(118, Tag 2))}} & \texttt{x\textsubscript{P2R}} & 0.1350 & 0.0244 & 0.1562 \\
-& \texttt{y\textsubscript{P2R}} & 0.2436 & 0.0975 & 0.3122 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{UWB}} & 0.1066 & 0.0165 & 0.1286 \\
+& \texttt{y\textsubscript{UWB}} & 0.1108 & 0.0361 & 0.1900 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 2), C\textsubscript{UWB}(118, Tag 2))}} & \texttt{x\textsubscript{Opt}} & 0.2158 & 0.0714 & 0.2671 \\
-& \texttt{y\textsubscript{Opt}} & 0.2021 & 0.0612 & 0.2474 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{P2R}} & 0.0870 & 0.0094 & 0.0969 \\
+& \texttt{y\textsubscript{P2R}} & 0.1616 & 0.0533 & 0.2308 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(118, Tag 2), RS\textsubscript{0.5m}(Tag 2))}} & \texttt{x\textsubscript{Opt}} & 0.2012 & 0.0464 & 0.2155 \\
+& \texttt{y\textsubscript{Opt}} & 0.1140 & 0.0194 & 0.1394 \\
 \hline
 \end{tabular}
 \end{table}
