--- a/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e124_person1/statistical_metrics.tex
+++ b/Archive/Data/Metrics/Comparison with reference coordinates/Statistics/e124_person1/statistical_metrics.tex
@@ -4,11 +4,14 @@
 \hline
 $Method$ & $Coordinate$ & $MAE$ & $MSE$ & $RMSE$ \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(124, Tag 1), C\textsubscript{UWB}(124, Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0814 & 0.0077 & 0.0879 \\
-& \texttt{y\textsubscript{P2R}} & 0.0582 & 0.0069 & 0.0828 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{UWB}(124, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{UWB}} & 0.0568 & 0.0049 & 0.0702 \\
+& \texttt{y\textsubscript{UWB}} & 0.0570 & 0.0041 & 0.0640 \\
 \hline
-\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(124, Tag 1), C\textsubscript{UWB}(124, Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.1790 & 0.0380 & 0.1950 \\
-& \texttt{y\textsubscript{Opt}} & 0.1602 & 0.0420 & 0.2051 \\
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{P2R}(124, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{P2R}} & 0.0821 & 0.0082 & 0.0904 \\
+& \texttt{y\textsubscript{P2R}} & 0.0681 & 0.0103 & 0.1014 \\
+\hline
+\multirow{2}{*}{{\footnotesize Error(C\textsubscript{Opt}(124, Tag 1), RS\textsubscript{0.5m}(Tag 1))}} & \texttt{x\textsubscript{Opt}} & 0.1787 & 0.0354 & 0.1882 \\
+& \texttt{y\textsubscript{Opt}} & 0.1368 & 0.0289 & 0.1699 \\
 \hline
 \end{tabular}
 \end{table}
